Crash when updating Custom Property via PyAPI #115046

Closed
opened 2023-11-17 15:07:49 +01:00 by Demeter Dzadik · 1 comment
Member

System Information
Operating system: Linux-6.5.7-gentoo-x86_64-Intel-R-_Core-TM-i9-9900K_CPU@_3.60GHz-with-glibc2.37 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-16 23:49, hash: f815484e7d45

Short description of error
Pretty weird one, doesn't happen normally, I seem to have gotten a file into a weird state somehow, and it's easily fixable. Reporting since who knows, maybe it's easy to get a file into this state, and crashing is not nice.

BUT:

  • Open file
  • Add a custom property
  • Run the thing
  • No longer crashes

WEIRDER YET:

  • Open file
  • Add a custom property
  • Reload the file without saving
  • Run the thing
  • No longer crashes!!!

Have fun!

**System Information** Operating system: Linux-6.5.7-gentoo-x86_64-Intel-R-_Core-TM-_i9-9900K_CPU_@_3.60GHz-with-glibc2.37 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.113.01 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-16 23:49, hash: `f815484e7d45` **Short description of error** Pretty weird one, doesn't happen normally, I seem to have gotten a file into a weird state somehow, and it's easily fixable. Reporting since who knows, maybe it's easy to get a file into this state, and crashing is not nice. - Open file: [custom_prop_pyapi_crash1.blend](/attachments/6ce492e3-210e-41c7-b780-48c942388f65) - Run line of code that's pre-typed in the PyConsole - Should crash every time. BUT: - Open file - Add a custom property - Run the thing - No longer crashes WEIRDER YET: - Open file - Add a custom property - Reload the file without saving - Run the thing - No longer crashes!!! Have fun!
Demeter Dzadik added the
Status
Needs Triage
Severity
Normal
Type
Report
labels 2023-11-17 15:07:50 +01:00

Thanks for the report.

The crash happens because the variable default_value here is read but not initialized.
https://projects.blender.org/blender/blender/blame/branch/main/source/blender/python/generic/idprop_py_ui_api.cc#L403

This code was implemented in 8b9a3b94fc

Seems to have a simple solution.
@HooglyBoogly ^

Thanks for the report. The crash happens because the variable `default_value` here is read but not initialized. https://projects.blender.org/blender/blender/blame/branch/main/source/blender/python/generic/idprop_py_ui_api.cc#L403 This code was implemented in 8b9a3b94fc Seems to have a simple solution. @HooglyBoogly ^
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-11-19 00:02:24 +01:00
Hans Goudey self-assigned this 2023-11-19 00:02:33 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-22 15:17:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115046
No description provided.